# network_sniffer

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: main.rs
src/app/: capture.rs  mod.rs
src/ui/: mod.rs  show_network_interfaces.rs
