[package]
name = "network_sniffer"
version = "0.1.0"
authors = ["NotNone <yuzhiqiang508384097@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
dioxus = { version = "0.6.0", features = [] }
pnet = "0.35.0"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
